--- a/index.html
+++ b/index.html
@@ -192,6 +192,14 @@
             </div>
             <div class="flex flex-col w-full gap-2.5">
                 <div class="flex items-center justify-between w-full text-sm">
+                    <label class="font-normal flex-1 cursor-pointer flex flex-col" for="modsHD">
+                        <span>Hidden</span>
+                    </label>
+                    <input type="checkbox" name="modsHD" id="modsHD" tabindex="-1">
+                </div>
+            </div>
+            <div class="flex flex-col w-full gap-2.5">
+                <div class="flex items-center justify-between w-full text-sm">
                     <label class="font-normal flex-1 cursor-pointer flex flex-col" for="modsHR">
                         <span>Hard Rock</span>
                     </label>
