feat: surpress animation + snake in / out slider

--- a/index.html
+++ b/index.html
@@ -85,6 +85,24 @@
                     <input type="checkbox" name="grid" id="grid">
                 </div>
             </div>
+            <div class="flex flex-col w-full gap-2.5">
+                <div class="flex items-center justify-between w-full text-sm">
+                    <label class="font-normal flex-1 cursor-pointer" for="snakeIn" tabindex="-1">Snaking In Slider</label>
+                    <input type="checkbox" name="snakeIn" id="snakeIn">
+                </div>
+            </div>
+            <div class="flex flex-col w-full gap-2.5">
+                <div class="flex items-center justify-between w-full text-sm">
+                    <label class="font-normal flex-1 cursor-pointer" for="snakeOut" tabindex="-1">Snaking Out Slider</label>
+                    <input type="checkbox" name="snakeOut" id="snakeOut">
+                </div>
+            </div>
+            <div class="flex flex-col w-full gap-2.5">
+                <div class="flex items-center justify-between w-full text-sm">
+                    <label class="font-normal flex-1 cursor-pointer" for="hitAnim" tabindex="-1">Hit Animation</label>
+                    <input type="checkbox" name="hitAnim" id="hitAnim">
+                </div>
+            </div>
         </div>
         <div class="bg-base p-10 flex flex-col w-full gap-5">
             <div class="font-medium">Background</div>
