feat: update credits

--- a/index.html
+++ b/index.html
@@ -87,13 +87,15 @@
             </div>
             <div class="flex flex-col w-full gap-2.5">
                 <div class="flex items-center justify-between w-full text-sm">
-                    <label class="font-normal flex-1 cursor-pointer" for="snakeIn" tabindex="-1">Snaking In Slider</label>
+                    <label class="font-normal flex-1 cursor-pointer" for="snakeIn" tabindex="-1">Snaking In
+                        Slider</label>
                     <input type="checkbox" name="snakeIn" id="snakeIn">
                 </div>
             </div>
             <div class="flex flex-col w-full gap-2.5">
                 <div class="flex items-center justify-between w-full text-sm">
-                    <label class="font-normal flex-1 cursor-pointer" for="snakeOut" tabindex="-1">Snaking Out Slider</label>
+                    <label class="font-normal flex-1 cursor-pointer" for="snakeOut" tabindex="-1">Snaking Out
+                        Slider</label>
                     <input type="checkbox" name="snakeOut" id="snakeOut">
                 </div>
             </div>
@@ -167,13 +169,15 @@
             <div class="font-medium">Beatmap Mirror</div>
             <div class="flex flex-col w-full gap-2.5">
                 <div class="flex items-center justify-between w-full text-sm gap-2.5">
-                    <input type="radio" name="beatmapMirror" id="mirror-nerinyan" value="Nerinyan" data-url="https://api.nerinyan.moe/d/$setId" tabindex="-1">
+                    <input type="radio" name="beatmapMirror" id="mirror-nerinyan" value="Nerinyan"
+                        data-url="https://api.nerinyan.moe/d/$setId" tabindex="-1">
                     <label class="font-normal flex-1 cursor-pointer flex flex-col" for="mirror-nerinyan">
                         <span>Nerinyan</span>
                     </label>
                 </div>
                 <div class="flex items-center justify-between w-full text-sm gap-2.5">
-                    <input type="radio" name="beatmapMirror" id="mirror-catboy" value="Catboy" data-url="https://catboy.best/d/$setId" tabindex="-1">
+                    <input type="radio" name="beatmapMirror" id="mirror-catboy" value="Catboy"
+                        data-url="https://catboy.best/d/$setId" tabindex="-1">
                     <label class="font-normal flex-1 cursor-pointer flex flex-col" for="mirror-catboy">
                         <span>Catboy</span>
                     </label>
@@ -241,6 +245,26 @@
                         </button>
                     </label>
                 </div>
+            </div>
+        </div>
+        <div class="bg-base p-10 flex flex-col w-full gap-5">
+            <div class="flex flex-col">
+                <div class="font-medium">About me</div>
+                <span class="text-xs">In case you wanna contact me :D</span>
+            </div>
+            <div class="flex gap-2.5">
+                <a href="https://osu.ppy.sh/users/8266808" target="_blank" rel="noopener noreferrer"
+                    class="p-2 rounded-lg bg-mantle text-text visited:text-text flex gap-2.5 px-5 hover:bg-surface-0 transition text-sm items-center text-center">
+                    <i class="ri-user-3-fill"></i>ANON TOKYO
+                </a>
+                <a href="https://github.com/FukutoTojido" target="_blank" rel="noopener noreferrer"
+                    class="p-2 rounded-lg bg-mantle text-text visited:text-text flex gap-2.5 px-5 hover:bg-surface-0 transition text-sm items-center text-center">
+                    <i class="ri-github-fill"></i>FukutoTojido
+                </a>
+                <a href="https://twitter.com/FukutoTojido" target="_blank" rel="noopener noreferrer"
+                    class="p-2 rounded-lg bg-mantle text-text visited:text-text flex gap-2.5 px-5 hover:bg-surface-0 transition text-sm items-center text-center">
+                    <i class="ri-twitter-fill"></i>@FukutoTojido
+                </a>
             </div>
         </div>
     </div>
