--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://preview.tryz.id.vn">
     <meta property="og:description" content="{{ description }}">
     <meta property="og:image" content="{{ image }}">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/sidePanel.css">
     <link rel="stylesheet" href="./styles/mobile.css">
