fix: responsive issue and compatibility

--- a/index.html
+++ b/index.html
@@ -56,6 +56,32 @@
         </div>
         <div id="app" class="relative w-full flex-1 overflow-hidden"></div>
         <div class="absolute bottom-0 right-0 invisible" id="a"></div>
+        <!-- <div class="absolute bottom-[120px] left-0 right-0 mx-auto flex items-center flex-col justify-end toasts">
+            <div
+                class="w-[320px] p-5 min-h-[50px] bg-base border-surface-1 rounded-xl drop-shadow-lg text-text text-sm flex items-center gap-2.5">
+                <div class="flex-1">
+                    Test 1
+                </div>
+            </div>
+            <div
+                class="w-[320px] p-5 min-h-[50px] bg-surface-0 border-surface-1 rounded-xl drop-shadow-lg text-text text-sm flex items-center gap-2.5">
+                <div class="flex-1">
+                    Test 2
+                </div>
+            </div>
+            <div
+                class="w-[320px] p-5 min-h-[50px] bg-surface-1 border-surface-1 rounded-xl drop-shadow-lg text-text text-sm flex items-center gap-2.5">
+                <div class="flex-1">
+                    Test 3
+                </div>
+            </div>
+            <div
+                class="w-[320px] p-5 min-h-[50px] bg-base border-surface-1 rounded-xl drop-shadow-lg text-text text-sm flex items-center gap-2.5">
+                <div class="flex-1">
+                    Test 4
+                </div>
+            </div>
+        </div> -->
         <div class="fixed top-0 left-0 w-full h-full bg-black/50 overlayHidden" id="overlay"></div>
     </main>
     <div class="fixed top-0 w-[600px] max-w-[80vw] h-svh overflow-auto bg-crust flex flex-col gap-2.5 text-text"
