--- a/index.html
+++ b/index.html
@@ -269,6 +269,31 @@
                     <input type="checkbox" name="modsDT" id="modsDT" tabindex="-1">
                 </div>
             </div>
+            <div class="flex flex-col w-full gap-2.5 text-sm">
+                <div class="font-normal flex-1 cursor-pointer flex flex-col">
+                    <span>Renderer</span>
+                    <span class="text-xs">Highly experimental and might cause performance drop on WebGPU</span>
+                </div>
+                <label for="renderer" class="relative h-full min-h-[50px] w-full text-xs" id="rendererLabel">
+                    <button id="renderer" class="hidden flyout-toggle"></button>
+                    <div
+                        class="w-full h-full bg-black/40 flex items-center gap-2.5 rounded-full px-5 hover:bg-white/10 transition-colors cursor-pointer text-text select-none outline-white/10 outline">
+                        <span id="currentRenderer" class="flex-1 text-left truncate">Current Renderer</span>
+                    </div>
+                    <div id="rendererContainer"
+                        class="flyout absolute w-full top-[100%] left-0 mt-2.5 bg-black/40 backdrop-blur-2xl p-2.5 rounded-[20px] z-99 flex-col gap-[5px] hidden max-h-[50vh] overflow-auto outline-white/10 outline">
+                        <div class="flex gap-2.5 items-center">
+                            <button
+                                class="flex w-full items-center gap-2.5 p-2.5 hover:bg-white/10 cursor-pointer transition-colors rounded-[10px] text-white renderer-select" data-renderer="webgl">WebGL
+                                2</button>
+                        </div>
+                        <div class="flex gap-2.5 items-center">
+                            <button
+                                class="flex w-full items-center gap-2.5 p-2.5 hover:bg-white/10 cursor-pointer transition-colors rounded-[10px] text-white renderer-select" data-renderer="webgpu">WebGPU</button>
+                        </div>
+                    </div>
+                </label>
+            </div>
             <div class="flex flex-col w-full gap-2.5">
                 <div class="flex items-center justify-between w-full text-sm">
                     <label for="reloadDefaultSkins" class="relative h-full min-h-[50px] w-full text-xs">
