feat: detect ID from URL fix: revert video playing method

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                     id="search">
                     <input type="text" name="" id="idInput"
                         class="min-w-[264px] h-full rounded-full rounded-r-none focus-within:outline-0 bg-black/40 px-5 placeholder:text-white/60 text-white text-xs flex-1"
-                        placeholder="Open beatmap with id">
+                        placeholder="Open using beatmap ID / URL">
                     <button class="h-full pr-5 rounded-full rounded-l-none bg-black/40" tabindex="-1" id="submitId">
                         <i class="ri-search-line text-white text-[24px]"></i>
                     </button>
