--- a/index.html
+++ b/index.html
@@ -168,6 +168,12 @@
             </div>
             <div class="flex flex-col w-full gap-2.5">
                 <div class="flex items-center justify-between w-full text-sm">
+                    <label class="font-normal flex-1 cursor-pointer" for="tintSliderBall" tabindex="-1">Tint Sliderball</label>
+                    <input type="checkbox" name="tintSliderBall" id="tintSliderBall" />
+                </div>
+            </div>
+            <div class="flex flex-col w-full gap-2.5">
+                <div class="flex items-center justify-between w-full text-sm">
                     <label class="font-normal flex-1 cursor-pointer" for="hitAnim" tabindex="-1">Hit Animation</label>
                     <input type="checkbox" name="hitAnim" id="hitAnim" />
                 </div>
