feat: migrate to Nerinyan V2

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <div class="font-medium">Beatmap Mirror</div>
             <div class="flex flex-col w-full gap-2.5">
                 <div class="flex items-center justify-between w-full text-sm gap-2.5">
-                    <input type="radio" name="beatmapMirror" id="mirror-nerinyan" value="Nerinyan" data-url="https://api.nerinyan.moe/d/$setId" tabindex="-1" />
+                    <input type="radio" name="beatmapMirror" id="mirror-nerinyan" value="Nerinyan" data-url="https://api.nerinyan.moe/v2/d/$setId" tabindex="-1" />
                     <label class="font-normal flex-1 cursor-pointer flex flex-col" for="mirror-nerinyan">
                         <span>Nerinyan</span>
                     </label>
